--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -3,7 +3,8 @@ chex
 colorama
 craftax
 distrax @ git+https://github.com/google-deepmind/distrax  # distrax release doesn't support jax > 0.4.13
-envpool; sys_platform == "linux"
+#envpool @ git+https://github.com/sail-sg/envpool
+#envpool; sys_platform == "linux"
 flashbax @ git+https://github.com/instadeepai/flashbax
 flax
 gymnasium
